Fix CSS formatting and spacing issues

--- a/Styles/TourismPage.css
+++ b/Styles/TourismPage.css
@@ -13,6 +13,10 @@ h1{
 	text-align: center;
 }
 
+body{
+	margin; 0;
+}
+
 nav{
 	padding: 20px;
 	background-color: #0038B8;
@@ -22,7 +26,7 @@ nav{
 	gap: 5px;
 	position: sticky;
 	top: 0;
-	 z-index:1000;
+	z-index: 1000;
 }
 
 #slogan{
